# ignition

./: CODEX_REVIEW.txt  Cargo.toml  README.md
.eggs/: egg.1.authority-manifest-system.txt  egg.1.ignition-cli-review.txt  egg.1.padlokk-ignition-strategic-context.txt  egg.module-alignment-map.txt
.eggs/auth/: egg.001.authority-chain-testing.txt
code_ref/auth/: chain.rs  mod.rs  validation.rs
code_ref/auth/bridge/: age_integration.rs
code_ref/auth/operations/: integration_test.rs
docs/archive/: egg.001.development-reference.txt  egg.golden.cage-next-phase.txt
docs/cage/: LIBRARY_USAGE.md
docs/features/: FEATURES_BASH.md  FEATURES_DATE.md  FEATURES_FS.md  FEATURES_GLOBAL.md  FEATURES_MATH.md  FEATURES_OPTIONS.md  FEATURES_PARAMS.md  FEATURES_PARSE.md  FEATURES_STRINGS.md  FEATURES_TESTING.md  FEATURES_THREADS.md  FEATURES_TRUTH.md  FEATURES_VISUALS.md
docs/misc/: CAGE_PTY_FIX.md  PADLOCK_INTEGRATION.md  SECRETS_FOR_RSB.md  SESSION.md
docs/procs/: CONTINUE.md  DONE.txt  PROCESS.txt  QUICK_REF.txt  ROADMAP.md  SPRINT.txt  TASKS.txt
docs/ref/: AUTHORITY_PROTOCOL.md  IGNITE_CLI.md  IGNITE_CONCEPTS.md  IGNITE_MANIFEST.md  IGNITE_PROOFS.md  IGNITE_README.md  RSB_LESSONS.md  SAFETY_DESIGN.md
docs/ref/padlock/: FEATURES.md  PADLOAD_ROADMAP.md  PADLOCK_CONCEPTS.md  PADLOCK_PRD.md  PRD.md  TEST_PLAN_001.md  padlock.sh
docs/ref/padlock.archive/: PADLOCK_README.md  RUST_PORT_PLAN.md  security_analysis.md
docs/ref/rsb/: HOWTO_HUB.md  PRELUDE_POLICY.md
docs/ref/rsb/features/: FEATURES_DEV.md  FEATURES_GENERATORS.md  FEATURES_HOST.md
docs/rsb/: CLI_RSB_USAGE.md  FEATURES_GATING_PLAN.md  MODULE_SPEC.md  RSB_QUICK_REFERENCE.md
docs/rsb/features/: FEATURES_CLI.md  FEATURES_PROGRESS.md  FEATURES_PROMPTS.md
src/: lib.rs  prelude.rs  prelude_dev.rs
src/code_ref/auth/: ignition.rs
src/code_ref/auth/bridge/: mod.rs
src/code_ref/auth/operations/: encrypt.rs  generate.rs  mod.rs
src/ignite/: error.rs  guards.rs  macros.rs  mod.rs  prelude.rs  prelude_dev.rs  utils.rs
src/ignite/authority/: chain.rs  manifests.rs  mod.rs  proofs.rs  storage.rs
src/ignite/authority/storage/: adapters.rs  error.rs  mod.rs
src/ignite/cli/: commands.rs  context.rs  mod.rs
src/ignite/logging/: mod.rs
src/ignite/security/: mod.rs  policy.rs
tests/unit/: deps.rs
