[package]
name = "cage"
version = "0.4.0"
edition = "2021"
description = "Age encryption automation CLI with PTY support"
repository = "https://github.com/padlokk/ignition"
license = "AGPL-3.0"            
publish = false  

[[bin]]
name = "ignite"
path = "src/bin/cli_ignite.rs"

[dependencies]

# RSB ecosystem dependencies
cage = { git = "https://github.com/padlokk/cage", branch = "main" }
rsb = { git = "https://github.com/oodx/rsb", branch = "main" }
hub = { git = "https://github.com/oodx/hub.git", features = ["terminal-ext"] }
