[package]
name = "ignite"
version = "0.4.0"
edition = "2021"
description = "Ignition authority chain CLI built atop cage"
repository = "https://github.com/padlokk/ignite"
license = "AGPL-3.0"
publish = false



[[bin]]
name = "ignite"
path = "src/bin/cli_ignite.rs"

[dependencies]

# Core dependencies
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
whoami = "1.5"

# RSB ecosystem dependencies
cage = { path = "../cage" }
rsb = { git = "https://github.com/oodx/rsb", branch = "main" }
hub = { git = "https://github.com/oodx/hub.git", features = ["terminal-ext", "data-ext", "time-ext", "random-ext"] }
serial_test = "3.2.0"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.0"
