[package]
name = "ignite"
version = "0.4.0"
edition = "2021"
description = "Ignition authority chain CLI built atop cage"
repository = "https://github.com/padlokk/ignite"
license = "AGPL-3.0"
publish = false



[[bin]]
name = "ignite"
path = "src/bin/cli_ignite.rs"

[dependencies]

# Core dependencies (not available through hub)
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["std"] }
whoami = "1.5"

# Serde needed in Cargo.toml for derive macros to work (proc-macros generate ::serde:: paths)
# We import traits from hub::serde but need the crate itself for macro expansion
serde = { version = "1.0", features = ["derive"] }

# RSB ecosystem dependencies
cage = { path = "../cage" }
rsb = { git = "https://github.com/oodx/rsb", branch = "main" }
# Hub provides shaped modules via domain groups:
# - data-ext: serde (traits + shaped re-exports), serde_json, base64
# - time-ext: chrono, uuid
# - random-ext: rand
hub = { git = "https://github.com/oodx/hub.git", features = ["terminal-ext", "data-ext", "time-ext", "random-ext"] }
serial_test = "3.2.0"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.0"
